--- a/ToDo-List.html
+++ b/ToDo-List.html
@@ -29,6 +29,11 @@ font-size:24px;
 <input id = 'todo' class = "input" placeholder = 'Ex: Get Milk'type = 'text'></input>
 <button onclick = "add()" class = 'btn'> Add to List</button>  
 <div class = "above" id = "above"></div>
+  <footer> 
+    <h4>
+      Made by Bishop Jackson<br>
+      Contact me at <a href = "mailto:bjthedj11@gmail.com>bjthedj11@gmail.com</a></h4>
+        </footer>
 </body>
 <script>
   document.getElementById("todo").focus();
