--- a/ToDo-List.html
+++ b/ToDo-List.html
@@ -30,9 +30,10 @@ font-size:24px;
 <button onclick = "add()" class = 'btn'> Add to List</button>  
 <div class = "above" id = "above"></div>
   <footer> 
-    <h4>
+    <p>
       Made by Bishop Jackson<br>
-      Contact me at <a href = "mailto:bjthedj11@gmail.com>bjthedj11@gmail.com</a></h4>
+      Contact me at <a href="mailto:bjthedj11@gmail.com">bjthedj11@gmail.com</a>
+        </p>
         </footer>
 </body>
 <script>
